--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 #spring.main.web-application-type=none
 
-spring.jackson.serialization.fail-on-empty-beans=false
+#spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.main.allow-circular-references:true
 # App Properties
