--- a/pom.xml
+++ b/pom.xml
@@ -120,11 +120,18 @@
 				<artifactId>spring-boot-starter-security</artifactId>
 			</dependency>
 		<!--comaparaison des dates -->
-		<dependency>
+		<!--<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.14.1</version>
+		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.14.1</version>
 		</dependency>
+
 		<!--<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
